# url-condenser

./: .env.docker  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: config.rs  errors.rs  lib.rs
api/src/tests/: mod.rs  url.rs
app/: Cargo.toml
app/src/: database.rs  main.rs
app/src/handlers/: url.rs
app/src/tests/: health.rs  url.rs
entity/: cargo.toml
entity/src/: lib.rs  url.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_url_table.rs
migrations/2023-03-16-194458_create_url_table/: up.sql
src/: config.rs  main.rs  schema.rs
src/handlers/: url.rs
src/models/: mod.rs  url.rs
src/tests/: url.rs
storage/: Cargo.toml
storage/src/: helpers.rs  lib.rs  url.rs
storage/tests/: helpers.rs  url.rs
url_condenser/: Cargo.toml
